# lairn

./: .gitignore  PROJECT_IDENTITY.md  PROJECT_STRUCTURE.md  README.md  SYSTEM_WORKFLOW.md  lairn_spec.md  lairn_spec_0.1.md  package-lock.json
backend/: lairn.db.bak.20260217_230549  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: quiz.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/llm/: ollama.py
backend/app/quiz/: evaluator.py  generator.py
backend/app/schemas/: quiz.py
backend/app/tests/: test_quiz_generation.py  test_quiz_sessions.py  test_short_answer_grading.py
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/api/: quiz.ts
frontend/src/components/: HealthBanner.tsx  NavTabs.tsx
frontend/src/constants/: topics.ts
frontend/src/pages/: HistoryPage.tsx  QuizRunnerPage.test.tsx  QuizRunnerPage.tsx  ResultsPage.test.tsx  ResultsPage.tsx  SetupPage.tsx
frontend/src/test/: test-utils.tsx
frontend/src/types/: api.ts
frontend/tests/e2e/: app.spec.ts
