[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.129.0"
uvicorn = { version = "^0.40.0", extras = ["standard"] }
pydantic = "^2.12.5"
pydantic-settings = "^2.13.0"
sqlalchemy = "^2.0.46"
sqlmodel = "^0.0.34"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
black = "^26.1.0"
ruff = "^0.15.1"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
